Closed
Bug 1531201
Opened 10 months ago
Closed 10 months ago
[MSE] Assertion when TrackBuffersManager::DoEvictData generate an invalid TimeInterval
Categories
(Core :: Audio/Video: Playback, defect)
Core
Audio/Video: Playback
Not set
Tracking
()
RESOLVED
FIXED
mozilla67
Tracking | Status | |
---|---|---|
firefox67 | --- | fixed |
People
(Reporter: jya, Assigned: jya)
References
(Blocks 1 open bug)
Details
Crash Data
Attachments
(1 file)
Invalid TimeInterval can be generated in TrackBuffersManager::DoEvictData
Assignee | ||
Updated•10 months ago
|
Assignee: nobody → jyavenard
Assignee | ||
Comment 1•10 months ago
|
||
We now allow frames to have a negative time (so that they can be decoded and trimmed).
Pushed by jyavenard@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/b03d042670c0 Don't assume all frames' time is greater than 0. r=gerald
Assignee | ||
Updated•10 months ago
|
Summary: [MSE] → [MSE] Assertion when TrackBuffersManager::DoEvictData generate an invalid TimeInterval
Comment 3•10 months ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 10 months ago
status-firefox67:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla67
You need to log in
before you can comment on or make changes to this bug.
Description
•