Bug 1531201 - Don't assume all frames' time is greater than 0. r=gerald

We now allow frames to have a negative time (so that they can be decoded and trimmed).

Differential Revision: https://phabricator.services.mozilla.com/D21474

--HG--
extra : moz-landing-system : lando